# pkg/handler/user_segments.go
@@ -15,7 +15,7 @@ import (
 // @Accept  json
 // @Produce  json
 // @Param input body structures.UserSegments true "Patch data"
-// @Success 200 {integer} integer 1
+// @Success 200 {object} validPatchResponse
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
@@ -48,18 +48,20 @@ func (h *Handler) patchSegment(c *gin.Context) {
 		return
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{
-		"user_id": user_id,
+	c.JSON(http.StatusOK, validPatchResponse{
+		UserId: user_id,
 	})
 }
 
-// @Summary Get Users In Segment
+// @Summary Get User Segments
+// @Description You can also use the request body to send data, but not here :)
+// @Description p.s. For example, via curl
 // @Tags user-segments
-// @ID get-users-in-segment
+// @ID get-user-segments
 // @Accpet json
 // @Produce json
-// @Param user_id query integer true "User data"
-// @Success 200 {integer} integer 1
+// @Param user_id query integer true "User id"
+// @Success 200 {object} validGetUserSegmentsResponse
 // @Failure 400,404 {object} errorResponse
 // @Failure 500 {object} errorResponse
 // @Failure default {object} errorResponse
@@ -92,8 +94,8 @@ func (h *Handler) getUsersInSegment(c *gin.Context) {
 		segments = []string{}
 	}
 
-	c.JSON(http.StatusOK, map[string]interface{}{
-		"user_id":  input.Id,
-		"segments": segments,
+	c.JSON(http.StatusOK, validGetUserSegmentsResponse{
+		UserId:   input.Id,
+		Segments: segments,
 	})
 }
