# pkg/structures/user.go
@@ -3,3 +3,8 @@ package structures
 type User struct {
 	Id int `json:"user_id" binding:"required"`
 }
+
+type UserHistory struct {
+	Id        int    `json:"user_id" binding:"required"`
+	YearMonth string `json:"year_month" binding:"required" example:"YYYY-MM"`
+}
